--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -23,23 +23,24 @@
             <form class="estilo-formulario">
                 <img src="../assets/fonts/images/logo-devconnect-lg.svg" alt="">
 
-                <div class="formulario campos">
-                   <label for="">Nome de usuario</label>
+                <div class="formulario-campos">
+                    <label for="">Nome de usuario</label>
                     <input type="" name="" id="">
+                </div>
 
-                <div class="formulario campos">
-                   <label for="">senha</label>
+                <div class="formulario-campos">
+                    <label for="">senha</label>
                     <input type="password" name="" id="">
                 </div>
 
-                <button type="submit">Entrar</button>
-                    <p>ou</p>
+                <button type="submit" class="formulario-botao-roxo">Entrar</button>
+                <p>ou</p>
 
-                    <a href="#">esqueceu a senha?</a>
+                <a href="#">esqueceu a senha?</a>
 
-            </form>
+            </form> 
 
-            <section id="secao cadastro" class="estilo-formulario">
+            <section id="secao-cadastro" class="estilo-formulario">
                 <p>Nao tem uma conta? <a href="#">Cadastre-se</a></p>
             </section>
 
